Try to fix mobile overflow.

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@ body {
   overflow-x: hidden;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 .top {
   display: flex;
   align-items: center;
